--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,6 @@ pillow>=10.0.0
 
 # Date/time handling enhancements
 python-dateutil>=2.8.2
+
+# Development tools
+ruff>=0.8.0  # Fast Python linter and formatter
