--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # Core dependencies for photochronos
 exifread>=3.0.0
 tzlocal>=5.0.0
-pywin32>=306  # for win32com.propsys (video metadata)
+pywin32>=306; sys_platform == "win32"  # for win32com.propsys (video metadata)
 
 # Enhanced CLI experience
 rich>=13.7.0  # Better terminal UI, progress bars, tables
